[package]
name = "mutilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["tracing", "http2", "macros"] }
axum-server = { version = "0.7.1", features = ["rustls", "tls-rustls"] }
json-patch = "2.0.0"
k8s-openapi = { version = "0.22.0", default-features = false, features = ["v1_24", "schemars"] }
kube = { version = "0.93.1", features = ["rustls-tls", "admission", "jsonpatch", "derive"], default-features = false }
log = { version = "0.4.22", features = ["kv_unstable", "serde", "kv_unstable_serde"] }
schemars = { version = "0.8.21", features = ["derive_json_schema"] }
serde = { version = "1.0.209", features = ["serde_derive", "derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
tracing-opentelemetry = "0.25.0"
opentelemetry = { version = "0.24.0"}
opentelemetry-otlp = { version = "0.17.0", features = ["opentelemetry-http"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
schematic = "0.17.4"
jsonptr = "0.4.7"

[dev-dependencies]
axum-test = "15.3.1"
envtestkit = "1.1.2"
pretty_assertions = "1.4.0"
rstest = "0.22.0"
