[package]
name = "mutilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["tracing", "http2", "macros"] }
axum-server = { version = "0.7.1", features = ["rustls", "tls-rustls"] }
json-patch = "2.0.0"
k8s-openapi = { version = "0.23.0", default-features = false, features = ["v1_30", "schemars"] }
kube = { version = "0.96.0", features = ["rustls-tls", "admission", "jsonpatch", "derive"], default-features = false }
log = { version = "0.4.22", features = ["kv_unstable", "serde", "kv_unstable_serde"] }
schemars = { version = "0.8.21", features = ["derive_json_schema"] }
serde = { version = "1.0.214", features = ["serde_derive", "derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
tracing-opentelemetry = "0.27.0"
opentelemetry = { version = "0.26.0"}
opentelemetry-otlp = { version = "0.26.0", features = ["opentelemetry-http"] }
opentelemetry-semantic-conventions = { version = "0.26.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
schematic = "0.17.6"
jsonptr = "0.4.7"
rustls = { version = "0.23.16", features = ["ring"] }

[dev-dependencies]
axum-test = "16.3.0"
envtestkit = "1.1.2"
pretty_assertions = "1.4.1"
rstest = "0.23.0"
