[package]
name = "mutilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.7.9", features = ["tracing", "http2", "macros"] }
axum-server = { version = "0.7.3", features = ["rustls", "tls-rustls"] }
json-patch = "3.0.1"
k8s-openapi = { version = "0.24.0", default-features = false, features = ["v1_30", "schemars"] }
kube = { version = "0.98.0", features = ["rustls-tls", "admission", "jsonpatch", "derive"], default-features = false }
log = { version = "0.4.29", features = ["kv_unstable", "serde", "kv_unstable_serde"] }
schemars = { version = "0.8.22", features = ["derive_json_schema"] }
serde = { version = "1.0.228", features = ["serde_derive", "derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.1"}
opentelemetry-otlp = { version = "0.27.0", features = ["opentelemetry-http"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
schematic = "0.19.2"
jsonptr = "0.6.3"
rustls = { version = "0.23.36", features = ["ring"] }

[dev-dependencies]
axum-test = "16.4.1"
envtestkit = "1.1.2"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
